--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -3,11 +3,11 @@
   <div class="card p-4" style="width: 100%; max-width: 400px; background-color: #f8d7da; border: 1px solid red;">
     <h2 class="text-center mb-4" style="color: red;">Login</h2>
 
-    <form>
+    <form []>
       <!-- Username input -->
       <div class="form-outline mb-4">
-        <label class="form-label" for="formExample1">Username</label>
-        <input type="text" id="formExample1" class="form-control" required />
+        <label class="form-label" for="formExample1">Email</label>
+        <input type="email" id="formExample1" class="form-control" required />
       </div>
 
       <!-- Password input -->
@@ -15,12 +15,12 @@
         <label class="form-label" for="form">Password</label>
         <input type="password" id="formE" class="form-control" required />
       </div>
-<!--
+
       <div class="row mb-4">
         <div class="col text-end">
           <a [routerLink]="['/forgotpassword']" style="color: red;">Forgot password?</a>
         </div>
-      </div>-->
+      </div>
       
       <!-- Submit button -->
       <div class="text-center">
