--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" style="font-weight: bold; color: black;" [routerLink]="['table']">Home<span class="sr-only"></span></a>
+          <a class="nav-link" style="font-weight: bold; color: black;" [routerLink]="['/table']">Home<span class="sr-only"></span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" style="font-weight: bold; color: black; "[routerLink]="['/addtask']">Add Task</a>
