--- a/src/app/component/register/register.component.html
+++ b/src/app/component/register/register.component.html
@@ -7,7 +7,7 @@
     <form>
       <!-- Username input -->
       <div class="form-outline mb-4">
-        <label class="form-label" for="formExample1">Username</label>
+        <label class="form-label" for="formExample1">Name</label>
         <input type="text" id="formExample1" class="form-control" required />
       </div>
 
